--- a/week2/src/style.scss
+++ b/week2/src/style.scss
@@ -109,6 +109,15 @@ input {
         border-left: none;
         background: #e3f6f5;
       }
+      .pagenation-item:hover{
+        background-color: #0f3433;
+        color:#fffffe;
+        opacity:0.7;
+      }
+      .active{
+        background-color: #0f3433;
+        color:#fffffe;
+      }
       .pagenation-prev {
         border: $border;
       }
